--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^1.13.1",
     "react-icons": "^5.5.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "swiper": "^12.0.3"
   }
 }
