--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
+    "canvas-confetti": "^1.9.4",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.9.4",
-    "recharts": "^3.3.0"
+    "react-router-dom": "^7.9.6",
+    "react-xarrows": "^2.0.2",
+    "recharts": "^3.3.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
