--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "d3": "^7.9.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
     "swiper": "^12.0.3"
